# datecalc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  noxfile.py  pyproject.toml  ruff.toml  rustfmt.toml
python/bizdate/: __init__.py  rs.pyi
python/datecalc/: rs.pyi
python/tests/: conftest.py  test_all.py
python/tests/data/: test_cal.json
src/: buscal.rs  lib.rs  py.rs  serde.rs
