[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "datecalc"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.maturin]
module-name = "datecalc.rs"
python-source = "python"
bindings = "pyo3"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "maturin-import-hook>=0.3.0",
    "memray>=1.19.1",
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
